# langtree

./: .gitignore  CLAUDE.md  README.md  heuristic.md  langtree_dev_plan.md  langtree_prd.md  main.py  project_plan.md  pyproject.toml  tests_plan.md
langtree/: __init__.py  cli.py  models.py  orchestrator.py
langtree/policies/: __init__.py  expansion.py  pruning.py  scoring.py  selection.py  termination.py
tests/: __init__.py  test_advanced_scenarios.py  test_cli.py  test_error_handling.py  test_expansion_scoring.py  test_integration.py  test_models.py  test_policies.py  test_policy_edge_cases.py
