[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langtree"
version = "0.1.0"
description = "Tree-of-Thought orchestration framework built on LangChain"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "LangTree Contributors"},
]
keywords = ["langchain", "tree-of-thought", "llm", "reasoning", "orchestration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-openai>=0.0.5",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
rich = ["rich>=12.0.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-requests",
]
all = ["langtree[rich,dev]"]

[project.scripts]
langtree = "langtree.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/langtree"
Documentation = "https://github.com/yourusername/langtree#readme"
Repository = "https://github.com/yourusername/langtree.git"
Issues = "https://github.com/yourusername/langtree/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["langtree*"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "langchain_core.*",
    "langchain_openai.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=langtree --cov-report=html --cov-report=term"